--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.17.1",
+    "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.1",
     "memory-cache": "^0.2.0",
     "node-sass": "^4.12.0",
@@ -13,7 +14,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-immutable": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
