--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.9",
+    "@types/react": "^16.9.4",
+    "@types/react-dom": "^16.9.1",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.1",
@@ -15,7 +19,8 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-immutable": "^4.0.0"
+    "redux-immutable": "^4.0.0",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
