--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^12.7.9",
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.9.1",
+    "@types/react-redux": "^7.1.4",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.1",
