--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.9.1",
     "@types/react-redux": "^7.1.4",
+    "eslint": "^6.1.0",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.1",
     "memory-cache": "^0.2.0",
-    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-immutable": "^4.0.0",
+    "sass": "^1.52.3",
     "typescript": "^3.6.3"
   },
   "scripts": {
