--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-immutable": "^4.0.0",
     "sass": "^1.52.3",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "ts-node-dev --respawn --transpile-only ./server.ts"
   },
   "proxy": "http://localhost:8080",
   "eslintConfig": {
@@ -51,6 +53,7 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1"
+    "enzyme-adapter-react-16": "^1.15.1",
+    "react-error-overlay": "^6.0.9"
   }
 }
