--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@types/express": "^4.17.13",
     "@types/history": "^4.7.3",
     "@types/jest": "^24.0.18",
@@ -15,13 +16,12 @@
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.1",
     "memory-cache": "^0.2.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.1.1",
     "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8",
     "redux-immutable": "^4.0.0",
     "sass": "^1.52.3",
     "ts-node-dev": "^2.0.0",
